/*
  Crossfit Agenda

  No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package crossfitagenda;
option go_package = "./;grpc";


message CredentialsGoogle200Response {

  string link = 3321850;

}


enum ProcessStatuses {
  ProcessStatuses_WORKING = 0;
  ProcessStatuses_FINISHED = 1;
  ProcessStatuses_FAILED = 2;
}

message SetTokenGoogleRequest {

  string token = 110541305;

}

message StartCrossfitAgenda500Response {

  int32 status = 355610639;

  string message = 418054152;

  string date = 3076014;

}
message Status200Response {

  int32 date = 3076014;

  string detail = 261482417;

  ProcessStatuses id = 3355;

  bool complete = 62574280;

}
import "google/protobuf/empty.proto";

service DefaultService {
  rpc CredentialsGoogle (google.protobuf.Empty) returns (CredentialsGoogle200Response);

  rpc SetTokenGoogle (SetTokenGoogleRequest) returns (google.protobuf.Empty);

  rpc StartCrossfitAgenda (google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc Status (google.protobuf.Empty) returns (Status200Response);

}
